2005-06-30  Federico Mena Quintero  <federico@ximian.com>

	* libxslt/xsltwin32config.h: Added this file back.  We'll have to
	figure out a way to make jhbuild not get CVS conflicts with it.

Thu Jun 30 14:09:55 PDT 2005 William Brack <wbrack@mmm.com.hk>

	* libxslt/numbers.c: fixed bug in negative prefix (bug 309209)
	
2005-06-17  Federico Mena Quintero  <federico@ximian.com>

	* libxslt/xsltwin32config.h: Removed from CVS; this is a generated
	file anyway and it breaks jhbuild all the time.

Sat May  7 11:28:41 CEST 2005 Daniel Veillard <daniel@veillard.com>

	* libexslt/libexslt.3: applied patch from Jonathan Wakely to fix
	  the namespace name for the EXSLT date and time functions in the man
	  page.

Wed Apr  6 23:58:12 CEST 2005 Igor Zlatkovic <igor@zlatkovic.com>

	* libexslt/exslt.c libexslt/libexslt.h: Windows build cleanups,
	  removed obsolete checks
	* libxslt/libxslt.h libxslt/win32config.h libxslt/xsltutils.h: 
	  Windows build cleanups, removed obsolete checks
	* win32/configure.js: removed obsolete copy operations
	* win32/Makefile.*: make install cleanup
	* xsltproc/xsltproc.c: Windows build cleanup, removed obsolete 
	  macro definitions
	* .cvsignore: added Eclipse project files

Sat Apr  2 13:34:11 CEST 2005 Daniel Veillard <daniel@veillard.com>

	* configure.in NEWS doc/*: preparing release of 1.1.14, updated docs
	  and rebuilt.

Thu Mar 31 23:50:43 CEST 2005 Daniel Veillard <daniel@veillard.com>

	* tests/docbook/result/fo/gdp-handbook.fo tests/general/bug-105.out
	  tests/general/bug-142.out: updated the result of some tests
	  following the change to serailization in libxml2.

Thu Mar 31 11:54:31 CEST 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: fixed bug #171488 with cascading select in
	  patterns.
	* tests/general/bug-161.*, tests/general/Makefile.am,
	  tests/docs/bug-161.*, tests/docs/Makefile.am: added test provided
	  by Ben Ko
	
Thu Mar 31 00:28:38 CEST 2005 Daniel Veillard <daniel@veillard.com>
